--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-light_blue.min.css" />
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <link rel="stylesheet" href="css/site.min.css" />
   </head>
   <body>
     <section>
-    <h2>Links</h2>
+      <h2>Links</h2>
       <ul>
         <li>
           <a href="navigation/navigation.md">navigation</a>
