--- a/index.html
+++ b/index.html
@@ -63,10 +63,16 @@
       <h3>Inspirational Research</h3>
       <ul>
         <li>
-          <a href="https://www.apple.com/mac/">Apple.com - Mac Store</a> <span class="tag-mobile">Mobile</span> <span class="tag-desktop">Desktop</span>
+          <a href="https://www.apple.com/mac/">Apple.com - Mac Store</a> <i class="fab fa-apple"></i> <span class="tag-mobile">Mobile</span> <span class="tag-desktop">Desktop</span>
         </li>
         <li>
           <a href="https://www.razerzone.com/gaming-laptops">Razer Store</a> <span class="tag-desktop">Desktop</span>
+        </li>
+        <li>
+          <a href="https://dribbble.com/shots/1804653-Handsome-Navigation-Animations">Dribbble - Handsome Navigation Animations <i class="fab fa-dribbble-square"></i></a>
+        </li>
+        <li>
+          <a href="https://dribbble.com/shots/591601-Leftside/attachments/46769">Dribbble - Leftside Navigation <i class="fab fa-dribbble-square"></i></a>
         </li>
       </ul>
     </section>
@@ -127,6 +133,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.1/js/all.js"></script>
   <script src="js/site.js"></script>
 
 </body>
