--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Design Sprint Inspiration and Ideas">
+  <meta name="author" content="Adam J. Jolicoeur">
   <title>Design Sprint</title>
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-
   <!-- Custom styles for this template -->
   <link href="css/site.min.css" rel="stylesheet">
 </head>
@@ -90,15 +89,13 @@
           <span class="fa-li">
             <i class="fas fa-angle-right"></i>
           </span>
-          <a href="https://dribbble.com/shots/1804653-Handsome-Navigation-Animations">Dribbble - Handsome Navigation Animations</a> <span style="color: pink;">
-            <i class="fab fa-dribbble fa-lg"></i>
-          </span>
+          <a href="https://dribbble.com/shots/1804653-Handsome-Navigation-Animations">Dribbble - Handsome Navigation Animations</a> <span style="color: pink;"><i class="fab fa-dribbble fa-lg"></i></span> <span class="tag-desktop">Desktop</span>
         </li>
         <li>
           <span class="fa-li">
             <i class="fas fa-angle-right"></i>
           </span>
-          <a href="https://dribbble.com/shots/591601-Leftside/attachments/46769">Dribbble - Leftside Navigation</a> <span style="color: pink;"><i class="fab fa-dribbble fa-lg"></i></span>
+          <a href="https://dribbble.com/shots/591601-Leftside/attachments/46769">Dribbble - Leftside Navigation</a> <span style="color: pink;"><i class="fab fa-dribbble fa-lg"></i></span> <span class="tag-desktop">Desktop</span>
         </li>
         <li>
           <span class="fa-li">
