add animations section

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
           <a class="nav-link page-scroll" href="#dashboards">Dashboards</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link page-scroll" href="#animations">Animations</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link page-scroll" href="#colors">Colors</a>
         </li>
       </ul>
@@ -175,6 +178,22 @@
             <i class="fas fa-angle-right"></i>
           </span>
           <a href="https://codepen.io/Wryte/pen/vyzqKR?depth=everything&order=popularity&page=5&q=dashboard&show_forks=false">Simple Dashboard</a> <span style="color: orange;"><i class="fab fa-codepen fa-lg"></i></span>
+        </li>
+      </ul>
+    </section>
+    <section id="animations" class="container-fluid">
+      <h2>Animations</h2>
+      <hr>
+      <h3>Inspirational Research</h3>
+      <ul class="fa-ul">
+        <li>
+          <span class="fa-li">
+            <i class="fas fa-angle-right"></i>
+          </span>
+          <a href="https://www.seattlecidercompany.com">Seattle Cider Company</a> <i class="fab fa-safari fa-lg"></i> <span class="tag-desktop">Desktop</span>
+          <ul>
+            <li>animations guide you to scroll through the site</li>
+          </ul>
         </li>
       </ul>
     </section>
