add ability to download sketch file

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <li class="nav-item">
           <a class="nav-link page-scroll" href="#colors">Colors</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link page-scroll" href="#assets">Design Assets</a>
+        </li>
       </ul>
     </div>
   </nav>
@@ -216,6 +219,19 @@
             <i class="fas fa-angle-right"></i>
           </span>
           <img src="img/deadpoolunicorn.jpg" />
+        </li>
+      </ul>
+    </section>
+    <section id="assets" class="container-fluid">
+      <h2>Design Assets</h2>
+      <small>Sketch files, PNGs, SVGs, etc.</small>
+      <hr>
+      <ul class="fa-ul">
+        <li>
+          <span class="fa-li">
+            <i class="fas fa-angle-right"></i>
+          </span>
+          <a href="designs/sketch/dualnavigation.sketch" target="top">OpenShift.io Dual Navigation concept</a> <i class="fas fa-download"></i>
         </li>
       </ul>
     </section>
