--- a/index.html
+++ b/index.html
@@ -233,6 +233,12 @@
           </span>
           <a href="designs/sketch/dualnavigation.sketch" target="top">OpenShift.io Dual Navigation concept</a> <i class="fas fa-download"></i>
         </li>
+        <li>
+          <span class="fa-li">
+            <i class="fas fa-angle-right"></i>
+          </span>
+          <a href="designs/sketch/Megamenu.sketch" target="top">OpenShift.io Megamenu concept</a> <i class="fas fa-download"></i>
+        </li>
       </ul>
     </section>
   </main>
