Begin to add Launcher sections

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <a class="nav-link page-scroll" href="#colors">Colors</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="examples/launcher.html">Launcher</a>
+          <a class="nav-link" href="examples/launcher/launcher.html">Launcher</a>
         </li>
       </ul>
     </div>
