Update second section

--- a/examples/launcher/launcher.html
+++ b/examples/launcher/launcher.html
@@ -17,6 +17,7 @@
     <div class="launcher-container">
       <div class="launcher-container_nav">
         <div class="vertical-bar">
+          <span class="vertical-bar_steps--0"></span>
           <a href="#MissionRuntime" class="vertical-bar_steps--1 mission-runtime">
             <div class="step-circle"></div> <span class="vertical-bar_steps--title">Select Mission &amp; Runtime</span>
           </a>
@@ -32,6 +33,7 @@
           <a href="#ProjectSummary" class="vertical-bar_steps--5 project-summary">
             <div class="step-circle"></div> <span class="vertical-bar_steps--title">Confirm Project Summary</span>
           </a>
+          <span class="vertical-bar_steps--6"></span>
         </div>
       </div>
       <div class="launcher-container_main">
@@ -333,10 +335,8 @@
             <div class="row row-cards-pf">
               <div class="col-xs-6 col-sm-4 col-md-4">
                 <div class="card-pf">
-                  <h2 class="card-pf-title">
-                    <input type="radio" name="target-environment">
-                    <h2 class="card-pf-title--title">Code Locally, Build and Deploy Online</h2>
-                  </h2>
+                  <input type="radio" name="target-environment">
+                  <h2 class="card-pf-title--title">Code Locally, Build and Deploy Online</h2>
                   <div class="card-pf-body--body">
                     <h3><b>Benefits</b></h3>
                     <ul>
@@ -356,18 +356,16 @@
                     <p>
                       Here is a brief description of what OpenShift Online is. There is a distinction between what OpenShift Online does compared to OpenShift.io.
                     </p>
-                    <!-- <div class="card-pf-body-description">
-                    </div> -->
+                    <div class="card-pf-footer--logo">
+                      <img src="openshift_logo_black.png" />
+                    </div>
                   </div>
-                  <img src="openshift_logo_black.png" />
                 </div>
               </div>
               <div class="col-xs-6 col-sm-4 col-md-4">
                 <div class="card-pf">
-                  <h2 class="card-pf-title">
-                    <input type="radio" name="target-environment">
-                    <h2 class="card-pf-title--title">Code, Deploy, Build</h2>
-                  </h2>
+                  <input type="radio" name="target-environment">
+                  <h2 class="card-pf-title--title">Code, Deploy, Build</h2>
                   <div class="card-pf-body--body">
                     <h3><b>Benefits</b></h3>
                     <ul>
@@ -395,10 +393,8 @@
               </div>
               <div class="col-xs-6 col-sm-4 col-md-4">
                 <div class="card-pf">
-                  <h2 class="card-pf-title">
-                    <input type="radio" name="target-environment">
-                    <h2 class="card-pf-title--title">Build &amp; Run Locally</h2>
-                  </h2>
+                  <input type="radio" name="target-environment">
+                  <h2 class="card-pf-title--title">Build &amp; Run Locally</h2>
                   <div class="card-pf-body--body">
                     <h3><b>Benefits</b></h3>
                     <ul>
